// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-log-viewer-saved-search-by-name should delete a saved search by name 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`delete-log-viewer-saved-search-by-name should handle empty name parameter 1`] = `
{
  "content": [
    {
      "text": "{"status":404,"detail":"Not Found"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`delete-log-viewer-saved-search-by-name should handle non-existent saved search 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The log search could not be found","status":404,"operationStatus":"NotFoundLogSearch"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
